tests/neg/inclusion/in-03.ts

/*@ option --extrainvs */

// Predefined objects
assert("PII" in Math);          // returns false
 
